--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -77,13 +77,13 @@
                 <td width="28"><img src="image/dash.png" width="28" height="56" alt="" style="display: block"/></td>
                 <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
-                      <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
+                      <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="28" alt="" style="display: block" /></td>
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 32px; font-family: Arial, Helvetica, sans-serif !important;">HSBC Premier cùng Quý khách tận hưởng trải nghiệm xứng tầm ở bất kỳ nơi đâu</td>
                     </tr>
                     <tr>
-                      <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
+                      <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="28" alt="" style="display: block" /></td>
                     </tr>
                     <tr>
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Kính gửi Quý khách hàng Premier [name],</td>
@@ -95,7 +95,7 @@
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Chúng tôi mong muốn giới thiệu đến Quý khách những ưu đãi kết nối toàn cầu xứng tầm vị thế Premier, từ Thẻ Tín Dụng World Mastercard<sup style="font-size: 12px">®</sup> và Thẻ Thanh Toán Quốc Tế VISA Platinum.</td>
                     </tr>
                     <tr>
-                      <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
+                      <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="28" alt="" style="display: block" /></td>
                     </tr>
                   </table></td>
                 <td width="28"><img src="image/dash.png" width="28" height="56" alt="" style="display: block"/></td>
@@ -568,7 +568,7 @@
 									  </table></td>
 							  </tr>
 							  <tr>
-								<td valign="middle" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.0; font-size: 1px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_11.jpg" width="588" height="3" alt="" style="display: block" /></td>
+								<td valign="middle" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.0; font-size: 1px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_11.jpg" width="644" height="3" alt="" style="display: block" /></td>
 							</tr>
 							  </table></td>
 						    </tr>
