--- a/source/index_en.html
+++ b/source/index_en.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Outstanding privileges from HSBC Premier World Master Credit Card® and HSBC Visa Platinum Debit Card</div>
+<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Offers from World Master Credit Card® and Visa Platinum Debit Card</div>
 <table width="700" border="0" cellpadding="0" cellspacing="0"  style="background-color:#FFFFFF; margin: 0 auto;" class="chs_body">
   <tr>
     <td style="margin: 0px; padding: 0px; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.5; color: #808080;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -92,7 +92,7 @@
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">We are delighted to introduce a host of new exclusive offers from HSBC Premier World Master Credit Card<sup style="font-size: 12px">®</sup> and HSBC Visa Platinum Debit Card especially for you.</td>
+                      <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">We are delighted to introduce a host of worldwide privileges worthy for your Premier status from World Mastercard Credit Card<sup style="font-size: 12px">®</sup> and Visa Platinum Debit Card.</td>
                     </tr>
                     <tr>
                       <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="28" alt="" style="display: block" /></td>
@@ -109,7 +109,7 @@
 					  <tr>
 						  <td width="300" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_1.jpg" width="300" height="auto" alt="" style="display: block" /></td>
 						  <td width="28" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="28" alt="" style="display: block" /></td>
-						  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 18px; font-family: Arial, Helvetica, sans-serif !important;"><strong style="color: #da0011;">BASK IN THE LAP OF LUXURY ALL AROUND THE WORLD WITH YOUR HSBC PREMIER WORLD MASTER CREDIT CARD<sup style="font-size: 14px;">® (*)</sup></strong></td>
+						  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 18px; font-family: Arial, Helvetica, sans-serif !important;"><strong style="color: #da0011;">LIVE A LUXURIOUS LIFESTYLE ALL AROUND THE WORLD WITH YOUR HSBC PREMIER WORLD MASTER CREDIT CARD<sup style="font-size: 14px;">® (*)</sup></strong></td>
 						  <td width="28" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="28" alt="" style="display: block" /></td>
 					  </tr>
 					  </table></td>
