--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -343,7 +343,7 @@
 								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 									  <tr>
 										  <td width="190" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_7.jpg" width="190" height="auto" alt="" style="display: block" /></td>
-									    <td align="left" valign="top" style="padding: 0; margin: 0; border-top: 1px solid #da0011; border-right: 1px solid #da0011; border-bottom: 1px solid #da0011; border-radius: 5px 0 0 5px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+									    <td align="left" valign="top" style="padding: 0; margin: 0; border-top: 1px solid #da0011; border-right: 1px solid #da0011; border-bottom: 1px solid #da0011; border-radius: 0 5px 5px 0; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 											  <tr>
 												  <td align="left" bgcolor="#fdd2d2" style="padding: 0; margin: 0; border-radius: 5px 0 0 0; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 													  <tr>
@@ -389,7 +389,7 @@
 								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 									  <tr>
 										  <td width="190" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_8.jpg" width="190" height="auto" alt="" style="display: block" /></td>
-									    <td align="left" valign="top" style="padding: 0; margin: 0; border-top: 1px solid #da0011; border-right: 1px solid #da0011; border-bottom: 1px solid #da0011; border-radius: 5px 0 0 5px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+									    <td align="left" valign="top" style="padding: 0; margin: 0; border-top: 1px solid #da0011; border-right: 1px solid #da0011; border-bottom: 1px solid #da0011; border-radius: 0 5px 5px 0; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 											  <tr>
 												  <td align="left" bgcolor="#fdd2d2" style="padding: 0; margin: 0; border-radius: 5px 0 0 0; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 													  <tr>
@@ -435,7 +435,7 @@
 								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 									  <tr>
 										  <td width="190" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_9.jpg" width="190" height="auto" alt="" style="display: block" /></td>
-									    <td align="left" valign="top" style="padding: 0; margin: 0; border-top: 1px solid #da0011; border-right: 1px solid #da0011; border-bottom: 1px solid #da0011; border-radius: 5px 0 0 5px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+									    <td align="left" valign="top" style="padding: 0; margin: 0; border-top: 1px solid #da0011; border-right: 1px solid #da0011; border-bottom: 1px solid #da0011; border-radius: 0 5px 5px 0; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 											  <tr>
 												  <td align="left" bgcolor="#fdd2d2" style="padding: 0; margin: 0; border-radius: 5px 0 0 0; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 													  <tr>
@@ -481,7 +481,7 @@
 								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 									  <tr>
 										  <td width="190" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_10.jpg" width="190" height="auto" alt="" style="display: block" /></td>
-									    <td align="left" valign="top" style="padding: 0; margin: 0; border-top: 1px solid #da0011; border-right: 1px solid #da0011; border-bottom: 1px solid #da0011; border-radius: 5px 0 0 5px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+									    <td align="left" valign="top" style="padding: 0; margin: 0; border-top: 1px solid #da0011; border-right: 1px solid #da0011; border-bottom: 1px solid #da0011; border-radius: 0 5px 5px 0; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 											  <tr>
 												  <td align="left" bgcolor="#fdd2d2" style="padding: 0; margin: 0; border-radius: 5px 0 0 0; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 													  <tr>
