--- a/source/index_en.html
+++ b/source/index_en.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Latest global offers for HSBC Premier Cardholders</title>
+<title>Latest offers for HSBC Premier card holder</title>
 <style type="text/css">
 * {
 	box-sizing: border-box;
