--- a/source/index_en.html
+++ b/source/index_en.html
@@ -545,7 +545,7 @@
 										  <td valign="middle" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 											<tr>
 											  <td width="20" bgcolor="#730014" valign="middle" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
-											  <td width="260" bgcolor="#730014" valign="middle" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Your dedicate<br />
+											  <td width="260" bgcolor="#730014" valign="middle" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Your dedicated<br />
 			Premier Relationship Manager<br />
 			is here for you</strong></td>
 											  <td width="90" bgcolor="#ebebeb" valign="middle" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_12.jpg" width="70" height="auto" alt="" style="display: block" /></td>
