--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -534,7 +534,7 @@
 							    <td align="left" style="padding: 20px 0 0 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">HSBC Premier hy vọng rằng những ưu đãi sẽ cùng Quý khách kiến tạo nên những trải nghiệm trên toàn cầu đẳng cấp, đáng nhớ.</td>
 						    </tr>
 							  <tr>
-							    <td align="left" style="padding: 10px 0 0 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Vui lòng liên hệ Giám đốc Quan hệ Khách hàng Premier để được hỗ trợ thông tin và sử dụng ưu đãi.</td>
+							    <td align="left" style="padding: 10px 0 0 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Vui lòng liên hệ Giám đốc Quan hệ Khách hàng Premier của Quý khách để được hỗ trợ thông tin và sử dụng ưu đãi.</td>
 						    </tr>
 							  <tr>
 							    <td height="28" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="28" alt="" style="display: block" /></td>
