--- a/source/index_en.html
+++ b/source/index_en.html
@@ -534,7 +534,7 @@
 							    <td align="left" style="padding: 20px 0 0 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">HSBC Premier hopes these offers create many memorable experiences for you and your family all around the world.</td>
 						    </tr>
 							  <tr>
-							    <td align="left" style="padding: 10px 0 0 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Please contact your Premier Managing Manager for further information and assistance.</td>
+							    <td align="left" style="padding: 10px 0 0 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Please contact your Premier Relationship Manager for further information and assistance.</td>
 						    </tr>
 							  <tr>
 							    <td height="28" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="28" alt="" style="display: block" /></td>
